# codeselfstudy_django

./: .coveragerc  .dockerignore  .editorconfig  .env-example  .gitignore  .prettierignore  .prettierrc  Makefile  README.md  docker-compose.dev.yml  gunicorn_config.py  package-lock.json  package.json  postcss.config.js  postcss.config.js_PENDING_EDITS  pyproject.toml  pytest.ini  supervisord.conf
.github/workflows/: codeql-analysis.yml
apps/discourse/: apps.py  formatters.py
apps/languages/: admin.py  apps.py  models.py
apps/languages/fixtures/: languages.yaml
apps/pages/: urls.py
apps/puzzles/: admin.py  helpers.py  models.py  puzzles.py  urls.py  views.py
apps/quizzes/: admin.py  models.py  urls.py  views.py
apps/slack/: command_parser.py  formatters.py  helpers.py  signature.py  urls.py  views.py
apps/users/: models.py
assets/src/: main.js
codeselfstudy/: models.py  settings.py  urls.py  views.py
codeselfstudy/helpers/: utils.py
config/: settings.py  urls.py
discourse/: formatters.py
docker/: django.dev.Dockerfile  init.sql  postgres.Dockerfile
helpers/: context_processors.py  utils.py
helpers/tests/: test_utils.py
nginx/dev/: nginx.conf
pages/: urls.py  views.py
production_server/: supervisord.conf
puzzles/: _puzzles.py  models.py
requirements/: development.txt  production.txt
scripts/: npm_build.sh  npm_start.sh  puzzles_to_fixtures.py  test_puzzle_request.sh
server_development/docker/: README.md  postgres.Dockerfile
server_production/: supervisord.conf
slack/: command_parser.py  formatters.py  signature.py
(+42 files in other folders)
