[tool.poetry]
name = "codeselfstudy_django"
version = "0.1.0"
description = ""
authors = ["Josh Cohen <backpack360@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
django-fsm = "^2.8.0"
Django = "^4.0.3"
django-simple-history = "^3.0.0"
django-taggit = "^2.1.0"
django-filter = "^21.1"
django-crispy-forms = "^1.14.0"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
Markdown = "^3.3.6"
PyYAML = "^6.0"
html2text = "^2020.1.16"
django-bleach = "^2.0.0"
beautifulsoup4 = "^4.11.1"
slack-sdk = "^3.15.2"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.0.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest = "^7.1.1"
Faker = "^13.3.4"
pytest-django = "^4.5.2"
pytest-xdist = "^2.5.0"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
django-model-utils = "^4.2.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
